# settlers_of_lore

./: .gitignore  Cargo.toml  README.md
.cargo/: config
notebooks/: Growth Parameters.ipynb
resources/data/: flowers.txt  trees.txt
resources/images/: cb_temple_b.tsx  sapling-001.aseprite  sapling-002.aseprite  sapling-003.aseprite  sapling-004.aseprite  sapling-005.aseprite
src/: app.rs  assets.rs  components.rs  entities.rs  glyph_text.rs  gui.rs  input.rs  main.rs  menu.rs  resources.rs  screen.rs  spritesheet.rs  state.rs  systems.rs  tilemap.rs  window.rs  world.rs
src/crafting/: mod.rs
src/plantae/: flower.rs  growth.rs  mod.rs  tree.rs
src/processables/: bark.rs  fruit.rs  leaf.rs  mod.rs  oil.rs  seed.rs
src/widgets/: menu.rs
